tests/codegen/errors/reader/quote-feature-postfix/atom.reader.error.reader.feature.missing.end/reader-feature-missing-end.mon
;; TEST-ID: tests.codegen.reader-error.reader-feature-missing-end
;; TEST-TIER: regression
;; TEST-STATUS: passing-baseline-2026-06-15
;; TEST-SECTION: codegen
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SUBSET: reader-errors/quote-feature-postfix
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.reader-error-coverage
;; TEST-PURPOSE: Trigger and pin diagnostic: Expected #--- to close feature block
;; TEST-ATOM: atom.reader.error.reader.feature.missing.end
;; TEST-CODEGEN-ATOM: atom.reader.error.reader.feature.missing.end
;; TEST-QUALITY: diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-READER-ERROR: Expected #--- to close feature block
;; TEST-READER-PATH: reader.c:7305 parser.feature
;; TEST-CODEGEN-PATH: diagnostic.parser.feature
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: reader
;; TEST-COVERAGE: reader.c:7305 Expected #--- to close feature block
;; TEST-USES-ATOM: atom.reader.error.reader.feature.missing.end
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-USES-ATOM: atom.reader.error
;; TEST-USES-ATOM: atom.reader.error.family.parser.feature
;; TEST-REFINES: atom.codegen.category.90.diagnostics
;; TEST-REFINES: atom.reader.error
;; TEST-MENU: errors/reader/quote-feature-postfix/atom.reader.error.reader.feature.missing.end
;; TEST-MENU-PATH: codegen/errors/reader/quote-feature-postfix/atom.reader.error.reader.feature.missing.end
;; TEST-ATOM-LEAF: atom.reader.error.reader.feature.missing.end
;; TEST-CLI-TARGET: codegen errors reader quote-feature-postfix

(module Main)
#+ experimental
(show 1)
